# BWEN_AI

./: .gitignore  README.md  pyproject.toml
.chainlit/: config.toml
app/: chainlit.md  config.toml  ingest.py  main.py  retrieve.py  test.py
app/config/: prompts.py
app/tools/: bwen_market_data.py  crypto_prices.py  question_suggestions.py  search.py
app/utils/: message_handler.py
app/workflow/: agent.py
bwen_kb/.obsidian/: graph.json  hotkeys.json  publish.json  workspace.json
bwen_kb/BWen Lore/: BWen FAQ.md  BWen Story.md  Lore BWEN github.md
bwen_kb/Governance/: Different token for voting.md  Vote reward.md  What is a Coordination Failure_.md
bwen_kb/Memecoin/: Memecoin Market.md  Murad ITW - Murad Mahmudov - The Memecoin Supercycle - TOKEN2049 Singapore 2024.md  Steady Lads 64 - Is the Memecoin Supercycle Upon Us_ Murad.md  The MemeCoin Supercycle - Why 2025 Will Be the Year of $100B MemeCoins (Murad Interview).md  Why 2025 Is the Year of Memecoins - Murad Mahmudov - ITW.md
bwen_kb/Philosophy DAO/: The Three Dimensions of Governance.md  The representation of value in the digital age..md  The technological pharmakon..md  Web 3.0 - The cradle of algorithmic governance..md  Work Through Collective Governance.md
